--- a/source/index.html
+++ b/source/index.html
@@ -10,12 +10,62 @@
 </head>
 
 <body class="page__body">
-  <h1>Hello world</h1>
-  <div class="color">
-    <a href="" class="link">
-      link
-    </a>
-  </div>
+  <section class="catalog">
+    <h1 class="catalog__title title">Ты сегодня покормил кота?</h1>
+    <ul class="catalog__list">
+      <li class="catalog__item">
+        <div class="catalog__card">
+          <div class="catalog__card__decor"></div>
+          <p class="catalog__card__tagline">Сказочное заморское яство</p>
+          <div class="discription">
+            <h2 class="discription__name">Нямушка</h2>
+            <p class="discription__flavor">с фуа-гра</p>
+            <p class="discription__servings"><span class="discription__servings__amount">10</span> порций</p>
+            <p class="discription__present">мышь в подарок</p>
+            <div class="value">
+              <p class="value__number">0,5</p>
+              <p class="value__measure">кг</p>
+            </div>
+          </div>
+        </div>
+        <p class="downtext">Чего сидишь? Порадуй котэ, <a class="downtext__link" href="#">купи</a></p>
+      </li>
+      <li class="catalog__item">
+        <div class="catalog__card">
+          <div class="catalog__card__decor"></div>
+          <p class="catalog__card__tagline">Сказочное заморское яство</p>
+          <div class="discription">
+            <h2 class="discription__name">Нямушка</h2>
+            <p class="discription__flavor">с фуа-гра</p>
+            <p class="discription__servings"><span class="discription__servings__amount">10</span> порций</p>
+            <p class="discription__present">мышь в подарок</p>
+            <div class="value">
+              <p class="value__number">0,5</p>
+              <p class="value__measure">кг</p>
+            </div>
+          </div>
+        </div>
+        <p class="downtext">Чего сидишь? Порадуй котэ, <a class="downtext__link" href="#">купи</a></p>
+      </li>
+      <li class="catalog__item">
+        <div class="catalog__card">
+          <div class="catalog__card__decor"></div>
+          <p class="catalog__card__tagline">Сказочное заморское яство</p>
+          <div class="discription">
+            <h2 class="discription__name">Нямушка</h2>
+            <p class="discription__flavor">с фуа-гра</p>
+            <p class="discription__servings"><span class="discription__servings__amount">10</span> порций</p>
+            <p class="discription__present">мышь в подарок</p>
+            <div class="value">
+              <p class="value__number">0,5</p>
+              <p class="value__measure">кг</p>
+            </div>
+          </div>
+        </div>
+        <p class="downtext">Чего сидишь? Порадуй котэ, <a class="downtext__link" href="#">купи</a></p>
+      </li>
+    </ul>
+  </section>
 </body>
 
 </html>
