--- a/source/index.html
+++ b/source/index.html
@@ -20,7 +20,7 @@
     <li class="catalog__item">
       <div class="catalog__card">
         <div class="catalog__card__decor"></div>
-        <p class="catalog__card__tagline">Сказочное заморское яство</p>
+        <p class="catalog__card__tagline tagline"><span class="tagline__default">Сказочное заморское яство</span></p>
         <div class="discription">
           <h2 class="discription__name">Нямушка</h2>
           <p class="discription__flavor">с фуа-гра</p>
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-      <p class="downtext">Чего сидишь? Порадуй котэ, <a class="downtext__link" href="#">купи</a></p>
+      <p class="downtext"><span class="downtext__default">Чего сидишь? Порадуй котэ, <a class="downtext__link" href="#">купи</a></span></p>
     </li>
   </template>
 
