--- a/source/index.html
+++ b/source/index.html
@@ -20,13 +20,16 @@
     <li class="catalog__item">
       <div class="catalog__card">
         <div class="catalog__card__decor"></div>
-        <p class="catalog__card__tagline tagline"><span class="tagline__default">Сказочное заморское яство</span></p>
+        <p class="catalog__card__tagline tagline">
+          <span class="tagline__default">Сказочное заморское яство</span>
+          <span class="tagline__selected hidden">Котэ не одобряет?</span>
+        </p>
         <div class="discription">
           <h2 class="discription__name">Нямушка</h2>
           <p class="discription__flavor">с фуа-гра</p>
           <p class="discription__servings"><span class="discription__servings__amount">10</span> порций</p>
           <p class="discription__present"><span class="discription__present__amount"></span><span class="discription_present__text"> мыши в подарок</span></p>
-          <p class="disdiscription__text"></p>
+          <p class="discription__text"></p>
           <div class="value">
             <p class="value__number">0,5</p>
             <p class="value__measure">кг</p>
